  [Anirudh Rao]
  * Fixed a bug in the gmf CSV importer: the coordinates were being
    sorted and new site_ids assigned even though the user input sites
    csv file had site_ids defined

  [Michele Simionato]
  * Fixed a bug in the rupture CSV exporter: the boundaries of a GriddedRupture
    were exported with lons and lats inverted
  * Added some metadata to the CSV risk outputs
  * Changed the distribution mechanism in ebrisk to reduce the slow tasks

  [Graeme Weatherill]
  * Updates Kotha et al. (2019) GMPE to July 2019 coefficients
  * Adds subclasses to Kotha et al. (2019) to implement polynomial site
    response models and geology+slope site response model
  * Adds QA test to exercise all of the SERA site response calculators

  [Michele Simionato]
  * Internal: there is not need to call ``gsim.init()`` anymore

  [Graeme Weatherill]
  * Adds parametric GMPE for cratonic regions in Europe

  [Michele Simionato]
  * In the agglosses output of scenario_risk the losses were incorrectly
    multiplied by the realization weight
  * Removed the output `sourcegroups` and added the output `events`

  [Graeme Weatherill]
  * Adds new meta ground motion models to undertake PSHA using design code
    based amplification coefficients (Eurocode 8, Pitilakis et al., 2018)
  * Adds site amplification model of Sandikkaya & Dinsever (2018)

  [Marco Pagani]
  * Added a new rupture-site metric: the azimuth to the closest point on the
    rupture

  [Michele Simionato]
  * Fixed a regression in disaggregation with nonparametric sources, which
    were effectively discarded
  * The site amplification has been disabled by default in the ShakeMap
    calculator, since it is usually already taken into account by the USGS

  [Daniele Viganò]
  * Deleted calculations are not removed from the database anymore
  * Removed the 'oq dbserver restart' command since it was broken

  [Richard Styron]
  * Fixed `YoungsCoppersmith1985MFD.from_total_moment_rate()`: due to numeric